--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-### Folders
 .idea
 /vendor/
-.sass-cache
-node_modules
-/src/html/build
-
-### Files
-*.bat
-*.sublime-*
-npm-debug.log
 /composer.phar
-/build/composer.lock
+/composer.lock
+
+/build/.lock
+/build/build.local.properties.yml
