--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ job_lint_app_phpdefaultversion: &definition_lint_app_phpdefaultversion
   stage: lint
   script:
     - composer require --dev friendsofphp/php-cs-fixer:^2.0 jakub-onderka/php-parallel-lint:^1.0
-    - vendor/bin/php-cs-fixer -vvv fix ./build --dry-run --diff --using-cache=no --rules=@PSR2
-    - vendor/bin/parallel-lint --exclude build/vendor ./build
+    - vendor/bin/php-cs-fixer -vvv fix . --dry-run --diff --using-cache=no --rules=@PSR2
+    - vendor/bin/parallel-lint --exclude vendor .
 
 job_lint_app_phpnextversion:
   <<: *definition_lint_app_phpdefaultversion
