--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,3 +35,8 @@ job_lint_app_phplegacyversion:
   <<: *definition_lint_app_phpdefaultversion
   image: chialab/php:7.2-apache
   allow_failure: true
+
+job_test_app:
+  stage: test
+  script:
+    - composer test
