--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,14 @@
             "Pixelbrackets\\PhpAppPublication\\": "src/"
         }
     },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0"
+    },
+    "scripts": {
+        "test": [
+            "phpunit tests/unit/"
+        ]
+    },
     "bin": [
         "bin/pap"
     ]
