--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
         "editorconfig-checker/editorconfig-checker": "^8.0",
         "friendsofphp/php-cs-fixer": "^2.0",
         "guzzlehttp/guzzle": "^6.0 || ^7.0",
-        "henrikbjorn/lurker": "^1.2",
         "jean85/pretty-package-versions": "^1.5 || ^2.0",
         "natxet/cssmin": "^3.0",
         "patchwork/jsqueeze": "^2.0",
         "php-parallel-lint/php-parallel-lint": "^1.0",
-        "phploc/phploc": "^4.0"
+        "phploc/phploc": "^4.0",
+        "totten/lurkerlite": "^1.3"
     },
     "autoload": {
         "psr-4": {
