[FEATURE] ✨ Lint-Fix task: Add scripts hook

--- a/tests/fixtures/build.common.properties.yml
+++ b/tests/fixtures/build.common.properties.yml
@@ -3,8 +3,13 @@ settings:
     scripts:
       - echo "buildassets script"
   lint:
+    lint-paths:
+      - src/
     scripts:
-      - echo "lint script"
+      - echo "lint check script"
+    fix:
+      scripts:
+        - echo "lint fix script"
   test:
     scripts:
       - echo "test script"
