[FEATURE] ✨ Add build script for executables
Add PHPacker as build script to generate self-contained exectables.
These wont conflict with existing PHP code anymore
(we tried to circumcent this using the separate folder approach,
but still ran inti situations where the build setuo used different
PHP versions than the app).
A new installer (pap-installer) package makes use of these executables.

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,9 @@
     "scripts": {
         "test": [
             "phpunit tests/unit/"
-        ]
+        ],
+        "build:phar": "php --define phar.readonly=0 build-phar.php",
+        "build:binary": "./build-binary.sh",
+        "build:executables": "./build-executables.sh"
     }
 }
