--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 ### GENERAL ###
 
-image: chialab/php:7.3-apache
+image: chialab/php:8.4-apache
 
 cache:
   key: ${CI_COMMIT_REF_SLUG}
@@ -21,19 +21,18 @@ before_script:
 job_lint_app_phpdefaultversion: &definition_lint_app_phpdefaultversion
   stage: lint
   script:
-    - composer require --dev friendsofphp/php-cs-fixer:^2.0 jakub-onderka/php-parallel-lint:^1.0
+    - composer require -W --dev friendsofphp/php-cs-fixer:^3.0 php-parallel-lint/php-parallel-lint:^1.0
     - vendor/bin/php-cs-fixer -vvv fix . --dry-run --diff --using-cache=no --rules=@PSR2
     - vendor/bin/parallel-lint --exclude vendor .
 
 job_lint_app_phpnextversion:
   <<: *definition_lint_app_phpdefaultversion
-  image: chialab/php:7.4-apache
+  image: chialab/php:8.5-apache
   allow_failure: true
 
-### Ubuntu 18.04 - PHP 7.2
 job_lint_app_phplegacyversion:
   <<: *definition_lint_app_phpdefaultversion
-  image: chialab/php:7.2-apache
+  image: chialab/php:7.4-apache
   allow_failure: true
 
 job_test_app:
