--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "description": "PHP App Publication",
     "license": "GPL-2.0-or-later",
     "require": {
-        "consolidation/robo": "^2.2",
+        "php": "^7.2 || ^8.0",
+        "consolidation/robo": "^3.0 || ^4.0 || ^5.0",
         "guzzlehttp/guzzle": "^6.0 || ^7.0",
         "jean85/pretty-package-versions": "^1.5 || ^2.0",
         "natxet/cssmin": "^3.0",
@@ -12,7 +13,7 @@
         "totten/lurkerlite": "^1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0"
+        "phpunit/phpunit": "^8.0 || ^9.6 || ^10.0 || ^11.0"
     },
     "suggest": {
         "editorconfig-checker/editorconfig-checker": "Check and fix file formats based on EditorConfig",
